# termx

./: .gitignore  README.md  __init__.py  compat.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  settings.development  setup.py  spinner.py  termcolor.py  utils.py
config/: exceptions.py
ext/utils/: formatting.py
fmt/colorlib/: base.py
logging/: handler.py
spin/: base.py
spinner/: core.py  models.py  utils.py
termx/: __init__.py  exceptions.py  main.py  utils.py  version.py
termx/colorlib/: __init__.py  base.py  color.py  exceptions.py  style.py
termx/config/: __init__.py  configure.py  constants.py  defaults.py  defaults.yml  develop.py  doc.py  lazy.py  sections.py  style_sets.py  utils.py
termx/config/_settings/: prod.py  styles.py
termx/config/settings/: app.py  base.py  dev.py
termx/core/: api.py  exceptions.py
termx/ext/: framework.py  scripts.py  utils.py
termx/fmt/: __init__.py  format.py
termx/formatting/: __init__.py  exceptions.py  format.py  logging.py  mixins.py  style.py
termx/logging/: __init__.py  api.py  exceptions.py  handler.py
termx/playground/: __init__.py  main.py
termx/setting/: dev.py
termx/spin/: api.py  models.py
termx/spinner/: __init__.py  api.py  base.py  constants.py  core.py  models.py  utils.py
termx/terminal/: __init__.py
tests/: conftest.py  test_config.py
tests/colorlib/: conftest.py  style.py
tests/formatting/: format.py  test_format.py
tests/logging/: conftest.py  library.py  utils.py
tests/spinner/: conftest.py  models.py  spinner.py  test_models.py
(+32 files in other folders)
