[tool.poetry]
name = "termx"
version = "0.1.0"
description = "Advanced Terminal Utilities"
authors = ["Nick Florin"]

[tool.poetry.dependencies]
python = "3.7.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
clean = "termx.main:clean"
cleanroot = "termx.main:cleanroot"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
